Finished basic Log in and Register Function

--- a/Frontend/src/css/loginTable.css
+++ b/Frontend/src/css/loginTable.css
@@ -1,3 +1,9 @@
-#loginTable{
+#LoginTable{
     text-align: center;
+}
+
+#LoginTitle{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
